@@ -72,7 +72,7 @@ dck_eject( void )
   if( settings_current.dck_file ) free( settings_current.dck_file );
   settings_current.dck_file = NULL;
 
-  ui_menu_activate_media_cartridge_eject( 0 );
+  ui_menu_activate( UI_MENU_ITEM_MEDIA_CARTRIDGE_EJECT, 0 );
 
   machine_reset();
 }
@@ -161,7 +161,7 @@ dck_read( const char *filename )
   }
 
   /* Make the menu item to eject the cartridge active */
-  ui_menu_activate_media_cartridge_eject( 1 );
+  ui_menu_activate( UI_MENU_ITEM_MEDIA_CARTRIDGE_EJECT, 1 );
 
   /* Don't deallocate the memory banks! */
   return libspectrum_dck_free( dck, 1 );
